--- a/mainchain-follower/main-chain-follower-api/Cargo.toml
+++ b/mainchain-follower/main-chain-follower-api/Cargo.toml
@@ -34,7 +34,9 @@ std = [
 serde = []
 block-source = ["std"]
 candidate-source = ["std"]
+native-token= ["std"]
 all-sources = [
     "block-source",
     "candidate-source",
+    "native-token"
 ]
