--- a/primitives/sidechain-mc-hash/Cargo.toml
+++ b/primitives/sidechain-mc-hash/Cargo.toml
@@ -7,7 +7,7 @@ description = "Logic for putting a main chain block reference in digest and inhe
 [dependencies]
 async-trait = { workspace = true }
 main-chain-follower-api = { workspace = true, features = ["block-source"] }
-sp-consensus-slots = { workspace = true }
+sp-consensus-slots = { workspace = true, features = ["std"] }
 sidechain-domain = { workspace = true, features = ["std"] }
 sp-consensus = { workspace = true }
 sp-inherents = { workspace = true, features = ["std"] }
