--- a/mainchain-follower/db-sync-follower/Cargo.toml
+++ b/mainchain-follower/db-sync-follower/Cargo.toml
@@ -39,3 +39,4 @@ ctor = "0.2.5"
 default = []
 block-source = ["main-chain-follower-api/block-source"]
 candidate-source = ["main-chain-follower-api/candidate-source"]
+native-token = ["main-chain-follower-api/native-token"]
