--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ codegen-units = 1
 [workspace.dependencies]
 anyhow = "1.0.75"
 async-trait = "0.1.68"
+trait-variant = "0.1.2"
 assert_cmd = "2.0.12"
 clap = { version = "4.4.18", features = ["derive"] }
 ed25519-zebra = { version = "4.0.3" }
