--- a/primitives/domain/Cargo.toml
+++ b/primitives/domain/Cargo.toml
@@ -20,6 +20,7 @@ num-traits = { workspace = true }
 num-derive = { workspace = true }
 sp-std = { workspace = true }
 lazy_static = { workspace = true }
+blake2b_simd = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
