--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - master
   workflow_dispatch:
+  repository_dispatch:
+    types: [test-run-pr]
 
 env:
   AWS_DEFAULT_REGION: eu-central-1
@@ -25,7 +27,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ github.token }}
-
+      - name: Update flake.lock with calling PR
+        if: github.event_name == 'repository_dispatch'
+        run: |
+          nix flake lock --update-input trustless-sidechain \
+          --override-input trustless-sidechain \
+          github:input-output-hk/partner-chains-smart-contracts/${{ github.event.client_payload.ref }}
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
