--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -68,6 +68,7 @@ substrate-prometheus-endpoint = { workspace = true }
 thiserror = { workspace = true }
 time-source = { workspace = true }
 derive-new = { workspace = true }
+partner-chains-node-commands = { workspace = true }
 
 # These dependencies are used for the node template's RPCs
 jsonrpsee = { workspace = true }
