--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -32,7 +32,9 @@ sc-transaction-pool = { workspace = true }
 sc-transaction-pool-api = { workspace = true }
 sc-offchain = { workspace = true }
 sc-consensus-aura = { workspace = true }
+sc-partner-chains-consensus-aura = { workspace = true }
 sp-consensus-aura = { workspace = true }
+sp-partner-chains-consensus-aura = { workspace = true }
 sp-consensus = { workspace = true }
 sc-consensus = { workspace = true }
 sc-consensus-grandpa = { workspace = true }
