--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -21,6 +21,7 @@ pallet-balances = { workspace = true }
 frame-support = { workspace = true }
 pallet-grandpa = { workspace = true }
 pallet-partner-chains-session = { workspace = true }
+pallet-session = { workspace = true }
 pallet-sudo = { workspace = true }
 frame-system = { workspace = true }
 frame-try-runtime = { workspace = true, optional = true }
@@ -38,7 +39,6 @@ sp-inherents = { workspace = true }
 sp-offchain = { workspace = true }
 sp-runtime = { workspace = true }
 sp-session = { workspace = true }
-sp-partner-chains-session = { workspace = true }
 sp-staking = { workspace = true }
 sp-std = { workspace = true }
 sp-transaction-pool = { workspace = true }
@@ -72,6 +72,7 @@ sidechain-slots = { workspace = true }
 session-manager = { workspace = true }
 pallet-native-token-management = { workspace = true }
 sp-native-token-management = { workspace = true, features = ["serde"] }
+pallet-session-runtime-stub = { workspace = true, default-features = false }
 
 [dev-dependencies]
 sp-io = { workspace = true }
@@ -128,7 +129,6 @@ std = [
 	"sp-offchain/std",
 	"sp-runtime/std",
 	"sp-session/std",
-	"sp-partner-chains-session/std",
 	"sp-staking/std",
 	"sp-std/std",
 	"sp-transaction-pool/std",
@@ -143,7 +143,8 @@ std = [
 	"sp-inherents/std",
 	"chain-params/std",
 	"pallet-native-token-management/std",
-	"sp-native-token-management/std"
+	"sp-native-token-management/std",
+	"pallet-session-runtime-stub/std",
 ]
 
 runtime-benchmarks = [
