--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -87,6 +87,7 @@ frame-benchmarking-cli = { workspace = true }
 # Local Dependencies
 sidechain-runtime = { workspace = true }
 sidechain-mc-hash = { workspace = true, features = ["mock"] }
+sp-native-token-management = { workspace = true }
 main-chain-follower-api = { workspace = true }
 db-sync-follower = { workspace = true, features = ["block-source", "candidate-source", "native-token"] }
 main-chain-follower-mock = { workspace = true, features = ["block-source", "candidate-source", "native-token"] }
