--- a/.github/workflows/binary-zip.yml
+++ b/.github/workflows/binary-zip.yml
@@ -155,10 +155,10 @@ jobs:
         run: |
           rm -rf partner-chains-smart-contracts-artifact
           mkdir -p partner-chains-smart-contracts-artifact
-          cp result/* partner-chains-smart-contracts-artifact/
+          unzip result/release.zip -d partner-chains-smart-contracts-artifact/
           ls -la partner-chains-smart-contracts-artifact/
           mv partner-chains-smart-contracts-artifact/sidechain-cli partner-chains-smart-contracts-artifact/sidechain-main-cli
-          mv sidechain-main-cli sidechain-main-cli
+          mv partner-chains-smart-contracts-artifact partner-chains-smart-contracts-artifact-renamed
 
       - name: Upload Directory as Artifact
         uses: actions/upload-artifact@v4
