--- a/.github/workflows/binary-zip.yml
+++ b/.github/workflows/binary-zip.yml
@@ -137,7 +137,7 @@ jobs:
             partner-chains-node-aarch64-apple-darwin
             partner-chains-cli-aarch64-apple-darwin
 
-  partner-chains-smart-contracts:
+  partner-chains-smart-contracts-build:
     runs-on: [self-hosted, nixos]
     steps:
       - name: Checkout repository
@@ -157,3 +157,26 @@ jobs:
           name: partner-chains-smart-contracts
           path: result/release.zip
 
+  partner-chains-smart-contracts-process:
+    runs-on: ubuntu-latest
+    needs: partner-chains-smart-contracts-build
+    steps:
+      - name: Download release.zip
+        uses: actions/download-artifact@v4
+        with:
+          name: partner-chains-smart-contracts
+          path: ./artifact
+  
+      - name: Unzip release.zip
+        run: |
+          mkdir -p artifact/unzipped
+          unzip artifact/release.zip -d artifact/unzipped
+  
+      - name: Rename sidechain-cli to sidechain-main-cli
+        run: mv artifact/unzipped/sidechain-cli artifact/unzipped/sidechain-main-cli
+  
+      - name: Upload Renamed Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: sidechain-main-cli
+          path: artifact/unzipped/
