--- a/.github/workflows/binary-zip.yml
+++ b/.github/workflows/binary-zip.yml
@@ -233,10 +233,11 @@ jobs:
         run: |
           mkdir -p artifact/unzipped
           unzip artifact/release.zip -d artifact/unzipped
-  
+          
       - name: Rename sidechain-cli to sidechain-main-cli
         run: |
-          mv artifact/unzipped/sidechain-cli artifact/unzipped/${{ needs.set-environment.outputs.sidechain_main_cli }}
+          destination_name="${{ needs.set-environment.outputs.sidechain_main_cli }}"
+          mv artifact/unzipped/sidechain-cli artifact/unzipped/$destination_name
   
       - name: Upload Renamed Artifact
         uses: actions/upload-artifact@v4
